syntax = "proto3";

package ${package}.domain;

import "akkaserverless/annotations.proto";

option java_outer_classname = "CounterDomain";

option (akkaserverless.file).event_sourced_entity = {
    name: "Counter"
    entity_type: "counter"
    state: "CounterState"
    events: ["ValueIncreased","ValueDecreased","ValueReset"]
};

message CounterState {
    int32 value = 1;
}

message ValueIncreased {
    string counter_id = 1 [(akkaserverless.field).entity_key = true];
}

message ValueDecreased {
    string counter_id = 1 [(akkaserverless.field).entity_key = true];
}

message ValueReset {
    string counter_id = 1 [(akkaserverless.field).entity_key = true];
}
